[package]
name = "astore-apps-repo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahqstore-types = "=1.4.0-rc5"
inquire = "0.7.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"

[features]
default = ["gen"]
gen = []
parse = []
load_bytes = []
remove_manifest = []