[package]
name = "astore-apps-repo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahqstore-types = "=1.4.0-rc6"
inquire = "0.7.0"
rand = "0.8.5"
reqwest = { version = "0.11.24", features = [
  "blocking",
  "json",
], optional = true }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"

[features]
default = ["gen"]
gen = []
parse = []
load_bytes = ["dep:reqwest"]
remove_manifest = []
