[package]
name = "astore-apps-repo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahqstore-types = { version = "3", features = ["apps_repo"] }
inquire = "0.7.5"
rand = "0.8.5"
reqwest = { version = "0.12.7", features = ["blocking", "json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.127"

[features]
default = []
load_bytes = []
remove_manifest = []
